feat: restore fonts

--- a/museum/index.html
+++ b/museum/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>museum</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" href="resetCSS.css" />
     <link rel="stylesheet" href="style.css" />
