feat: repair titles

--- a/museum/index.html
+++ b/museum/index.html
@@ -22,7 +22,7 @@
             <h1 class="main-title">Louvre</h1>
             <nav class="navigation">
                 <ul>
-                    <li><a href="#Visiting">Visiting</a></li>
+                    <li><a href="#visiting">Visiting</a></li>
                     <li><a href="#Explore">Explore</a></li>
                     <li><a href="#Video">Video</a></li>
                     <li><a href="#Gallery">Gallery</a></li>
