feat: fix errors

--- a/museum/index.html
+++ b/museum/index.html
@@ -352,8 +352,8 @@
                                     <li>
                                         <div>Senior 65+ (10 €)</div>
                                         <div class="counter"><button><img src="assets/svg/-white.svg"
-                                                    alt="minus"></button><input type="number" name="amount-of-basic"
-                                                id="amount-of-basic"><button><img src="assets/svg/+white.svg"
+                                                    alt="minus"></button><input type="number" name="new-amount-of-basic"
+                                                id="new-amount-of-basic"><button><img src="assets/svg/+white.svg"
                                                     alt="plus"></button></div>
                                     </li>
                                 </ul>
