feat: complete popup

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -75,7 +75,7 @@
         <section class="welcome dark-theme">
             <div class="container">
                 <div class="content">
-                    <h2>Welcome
+                    <h2>Welcome <br>
                         to the Louvre</h2>
                     <p>From the castle to the museum</p>
                     <a href="tour1.html" target="_blank" class="btn-main btn"> Discover
