docs: add scrollToTop.js

--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -18,11 +18,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;400;500;700;900&display=swap"
         rel="stylesheet">
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" href="resetCSS.css" />
+
+
     <link rel="stylesheet" href="style.css" />
+
     <link rel="icon" href="assets/favicon.ico">
 </head>
 
@@ -507,17 +510,24 @@
 
                     <form action="#" id="booking-tickets">
                         <ul>
-                            <li class="chooseDate">Date<input type="date" value="" required name="date" id="date"></li>
-                            <li class="chooseTime">Time<input type="time" required name="time" id="time"></li>
+                            <li class="chooseDate">Date<input type="date" required name="date" id="date"></li>
+                            <li class="chooseTime">Time<input type="time" required name="time" id="time" min="09:00"
+                                    max="18:00" value="13:30" step="1800">
+                            </li>
                             <li class="writeName">Name<input type="text" required name="name" id="name"
                                     placeholder="Name"></li>
                             <li class="writeEmail">E-mail<input type="email" required name="email" id="email"
                                     placeholder="E-mail"></li>
                             <li class="writePhone">Phone<input type="tel" id="phone" name="phone" required
                                     placeholder="Phone"></li>
-                            <li class="selectType">Ticket Type<select name="select" required multiple size="1">
-                                    <option value="value1">Значение 1</option>
-                                    <option value="value2" selected>Значение 2</option>
+                            <li class="selectType">Ticket Type<select name="select" required size="1">
+                                    <option value="Permanent" selected="true">Permanent
+                                        exhibition</option>
+                                    <option value="Temporary">Temporary
+                                        exhibition</option>
+                                    <option value="Combined">Combined
+                                        Admission</option>
+
                                 </select></li>
                         </ul>
 
@@ -559,7 +569,8 @@
                         <h4>Overview</h4>
                         <p>Tour to Louvre</p>
                         <ul class="total-options">
-                            <li class="choosen-date">Friday, August 19</li>
+                            <li class="choosen-date"><span class="choosen-day-week">Friday</span>, <span
+                                    class="choosen-date-month-day">August 19</span></li>
                             <li class="choosen-time">16 : 30</li>
                             <li class="choosen-type">Temporary exhibition</li>
                         </ul>
@@ -621,9 +632,8 @@
                         </ul>
                     </div>
 
-                    <iframe width='960' height='640'
-                        src="https://api.mapbox.com/styles/v1/nimfa4400/ckug36gtg9sic17o48f6cu968.html?title=false&access_token=pk.eyJ1IjoibmltZmE0NDAwIiwiYSI6ImNrdWcybzQyZTFqaHQyeG10dWo5MzQ5a2kifQ.SGFaxu_8iazsffda8R2DAA&zoomwheel=false#17.93/48.860083/2.33577"
-                        title="Monochrome" style="border:none;"></iframe>
+                    <div id='map' style='width: 960px; height: 640px;'></div>
+
 
                 </div>
 
@@ -698,7 +708,7 @@
         </div>
     </footer>
 
-
+    <div class="arrowScroll">▲</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
@@ -710,7 +720,11 @@
     <script src="js/slider-video.js"></script>
     <script src="js/custom-player.js"></script>
     <script src="js/tickets.js"></script>
+    <script src="js/scrollToTop.js"></script>
+
     <script src="https://unpkg.com/beerslider/dist/BeerSlider.js"></script>
+
+
     <script>
         new BeerSlider(document.getElementById('slider'));
     </script>
