--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -8,7 +8,7 @@
     <title>museum</title>
 
 
-    <link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css">
+
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -260,22 +260,17 @@
                         because it looked different.
                     </p>
                 </div>
-                <!--   <div class="img-comp-container">
+                <div class="img-comp-container">
                     <div class="img-comp-img imgBefore">
                         <img src="assets/img/explore-slider/after.jpg" width="720" height="700">
                     </div>
-                    <div class="img-comp-slider"></div>
+                    <div class="img-comp-slider" draggable="true"></div>
                     <div class="img-comp-img imgAfter">
                         <img src="assets/img/explore-slider/before.jpg" width="720" height="700">
                     </div>
-                </div> -->
-
-                <div id="slider" class="beer-slider">
-                    <img src="assets/img/explore-slider/after.jpg" alt="slideAfter">
-                    <div class="beer-reveal">
-                        <img src="assets/img/explore-slider/before.jpg" alt="slideBefore">
-                    </div>
                 </div>
+
+
 
 
             </div>
@@ -511,8 +506,31 @@
                     <form action="#" id="booking-tickets">
                         <ul>
                             <li class="chooseDate">Date<input type="date" required name="date" id="date"></li>
-                            <li class="chooseTime">Time<input type="time" required name="time" id="time" min="09:00"
-                                    max="18:00" value="13:30" step="1800">
+
+                            <li class="chooseTime">Time
+                                <select name="chooseTime" id="chooseTime" required size="1">
+                                    <option value="9:00" selected>9:00</option>
+                                    <option value="9:30">9:30</option>
+                                    <option value="10:00">10:00</option>
+                                    <option value="10:30">10:30</option>
+                                    <option value="11:00">11:00</option>
+                                    <option value="11:30">11:30</option>
+                                    <option value="12:00">12:00</option>
+                                    <option value="12:30">12:30</option>
+                                    <option value="13:00">13:00</option>
+                                    <option value="13:30">13:30</option>
+                                    <option value="14:00">14:00</option>
+                                    <option value="14:30">14:30</option>
+                                    <option value="15:00">15:00</option>
+                                    <option value="15:30">15:30</option>
+                                    <option value="16:00">16:00</option>
+                                    <option value="16:30">16:30</option>
+                                    <option value="17:00">17:00</option>
+                                    <option value="17:30">17:30</option>
+                                    <option value="18:00">18:00</option>
+                                </select>
+                                <!-- <input type="time" required name="time" id="time" min="09:00"
+                                    max="18:00" value="13:30" step="1800">-->
                             </li>
                             <li class="writeName">Name<input type="text" required name="name" id="name"
                                     placeholder="Name"></li>
@@ -591,7 +609,7 @@
                     </div>
 
                     <form action="#" class="credit-card">
-                        <div class="card first-side">
+                        <div class="bankCard first-side">
                             <label for="cardNum">Card number</label><br>
                             <input type="text" id="cardNum" name="cardNum"><br>
                             <label for="expDateMonth">Expiration date</label><br>
@@ -600,7 +618,7 @@
                             <label for="cardHName">Cardholder name</label><br>
                             <input type="text" id="cardHName" name="cardHName">
                         </div>
-                        <div class="card second-side">
+                        <div class="bankCard second-side">
                             <div>
                                 <label for="cvv">CVC/CVV</label> <br><input type="number" id="cvv" name="cvv">
                                 <p>The last
@@ -721,13 +739,13 @@
     <script src="js/custom-player.js"></script>
     <script src="js/tickets.js"></script>
     <script src="js/scrollToTop.js"></script>
+    <script src="js/comparation-img.js"></script>
+    <script src="js/selfEvaluation.js"></script>
 
-    <script src="https://unpkg.com/beerslider/dist/BeerSlider.js"></script>
 
 
-    <script>
-        new BeerSlider(document.getElementById('slider'));
-    </script>
+
+
 
 </body>
 
