--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art-quiz</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <script src="assets/js/script.js"></script>
+    <h1>My JS App</h1>
+    <h2>hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</h2>
 </body>
 
 </html>
