feat: add basic html and styles

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -6,12 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art-quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>My JS App</h1>
-    <h2>hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</h2>
+    <div class="container">
+        <header>
+            <h1>Art Quiz</h1>
+        </header>
+        <main>
+            <ul>
+                <li>
+                    <h2>Artists</h2>
+
+                </li>
+                <li>
+                    <h2>Paintings</h2>
+
+                </li>
+            </ul>
+            <button class="settings">
+                <img src="./images/settings.svg" alt="settings">
+            </button>
+        </main>
+
+        <footer>
+            <ul>
+                <li class="nameCourse">
+                    <a href="https://rs.school/js/" target="_blank"><img src="./images/rs_school_js.svg" alt="link"
+                            width="100"></a>
+                </li>
+                <li>
+                    <a href="https://github.com/SavitskayaKseniya22" target="_blank">KSENIYA SAVITSKAYA</a>
+                </li>
+                <li>© 2021</li>
+            </ul>
+        </footer>
+    </div>
 </body>
 
 </html>
