--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -1,98 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art-quiz</title>
+  </head>
 
-
-</head>
-
-<body>
+  <body>
     <div class="container">
-        <header>
-            <h1>Art Quiz</h1>
-            <button class="back-home-button displayNone">
-                <img src="./images/back.svg" alt="back">
-            </button>
-        </header>
-        <main>
-            <ul class="quiz-type">
-                <li>
-                    <h2>Artists</h2>
+      <header>
+        <h1>Art Quiz</h1>
+        <button class="back-home-button displayNone">
+          <img src="./images/back.svg" alt="back" />
+        </button>
+      </header>
+      <main>
+        <ul class="quiz-type">
+          <li>
+            <h2>Artists</h2>
+          </li>
+          <li>
+            <h2>Paintings</h2>
+          </li>
+        </ul>
+      </main>
+      <div class="settings settings-position">
+        <input type="checkbox" id="but-settings-open" />
+        <label for="but-settings-open"
+          ><img src="./images/settings.svg" alt="settings"
+        /></label>
 
-                </li>
-                <li>
-                    <h2>Paintings</h2>
+        <div class="settings-popup">
+          <label for="but-settings-open"
+            ><img src="./images/crossWhite.png" alt="cross" class="cross-close"
+          /></label>
 
-                </li>
-            </ul>
-
-
-
-        </main>
-        <div class="settings settings-position">
-            <input type="checkbox" id="but-settings-open">
-            <label for="but-settings-open"><img src="./images/settings.svg" alt="settings"></label>
-
-            <div class="settings-popup">
-                <label for="but-settings-open"><img src="./images/crossWhite.png" alt="cross"
-                        class="cross-close"></label>
-
-                <h2>Settings</h2>
-                <ul class="settings-list">
-                    <li>
-                        <h3>Volume</h3>
-                        <div class="settings-block-content">
-                            <button class="but-volume-off but-volume"></button>
-                            <input type="range">
-                            <button class="but-volume-on but-volume"></button>
-                        </div>
-
-                    </li>
-                    <li>
-                        <h3>Timer</h3>
-                        <div class="settings-block-content">
-                            <input type="checkbox" id="toggle-button-timer" class="toggle-button">
-                            <label for="toggle-button-timer" class="text" name="off">Off</label>
-                            <label for="toggle-button-timer" class="text" name="on">On</label>
-                        </div>
-
-                    </li>
-                    <li>
-                        <h3>Time to answer</h3>
-                        <div class="settings-block-content">
-                            <button class="but-time-down but-time"></button>
-                            <input type="text" value="15">
-                            <button class="but-time-up but-time"></button>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="but-set-list">
-                    <li>
-                        <button class="default-set but-set">Default</button>
-                    </li>
-                    <li>
-                        <button class="save-set but-set">Save</button>
-                    </li>
-                </ul>
-            </div>
+          <h2>Settings</h2>
+          <ul class="settings-list">
+            <li>
+              <h3>Volume</h3>
+              <div class="settings-block-content">
+                <button class="but-volume-off but-volume"></button>
+                <input type="range" />
+                <button class="but-volume-on but-volume"></button>
+              </div>
+            </li>
+            <li>
+              <h3>Timer</h3>
+              <div class="settings-block-content">
+                <input
+                  type="checkbox"
+                  id="toggle-button-timer"
+                  class="toggle-button"
+                />
+                <label for="toggle-button-timer" class="text" name="off"
+                  >Off</label
+                >
+                <label for="toggle-button-timer" class="text" name="on"
+                  >On</label
+                >
+              </div>
+            </li>
+            <li>
+              <h3>Time to answer</h3>
+              <div class="settings-block-content">
+                <button class="but-time-down but-time"></button>
+                <input type="text" value="15" />
+                <button class="but-time-up but-time"></button>
+              </div>
+            </li>
+          </ul>
+          <ul class="but-set-list">
+            <li>
+              <button class="default-set but-set">Default</button>
+            </li>
+            <li>
+              <button class="save-set but-set">Save</button>
+            </li>
+          </ul>
         </div>
-        <footer>
-            <ul>
-                <li class="nameCourse">
-                    <a href="https://rs.school/js/" target="_blank"><img src="./images/rs_school_js.svg" alt="link"
-                            width="100"></a>
-                </li>
-                <li>
-                    <a href="https://github.com/SavitskayaKseniya22" target="_blank">KSENIYA SAVITSKAYA</a>
-                </li>
-                <li>© 2021</li>
-            </ul>
-        </footer>
+      </div>
+      <footer>
+        <ul>
+          <li class="nameCourse">
+            <a href="https://rs.school/js/" target="_blank"
+              ><img src="./images/rs_school_js.svg" alt="link" width="100"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/SavitskayaKseniya22" target="_blank"
+              >KSENIYA SAVITSKAYA</a
+            >
+          </li>
+          <li>© 2021</li>
+        </ul>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
