feat: add nav button behaviour

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -17,7 +17,7 @@
           <img src="./images/home1391.svg" alt="home" />
         </button>
         <button class="back-cat" disabled>
-          <img src="./images/back.svg" alt="back" />
+          <img src="./images/menu-navigation.svg" alt="back" />
         </button>
 
       </nav>
