feat: fix settings label position

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -12,14 +12,15 @@
   <div class="container">
     <header>
       <h1>Art Quiz</h1>
-      <nav class="displayNone nav-button">
-        <button class="back-home-button">
+      <nav class="nav-button">
+        <button class="back-home-button" disabled>
           <img src="./images/home1391.svg" alt="home" />
         </button>
         <button class="back-cat" disabled>
           <img src="./images/menu-navigation.svg" alt="back" />
         </button>
-
+        <label class="but-settings-toggle" for="but-settings-open"><img src="./images/settings.svg"
+            alt="settings" /></label>
       </nav>
 
     </header>
@@ -35,7 +36,7 @@
     </main>
     <div class="settings settings-position">
       <input type="checkbox" id="but-settings-open" />
-      <label for="but-settings-open"><img src="./images/settings.svg" alt="settings" /></label>
+
 
       <div class="settings-popup">
         <label for="but-settings-open"><img src="./images/crossWhite.png" alt="cross" class="cross-close" /></label>
