feat: fix question card markup

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -14,12 +14,13 @@
       <h1>Art Quiz</h1>
       <nav class="nav-button">
         <button class="back-home-button" disabled>
-          <img src="./images/home1391.svg" alt="home" />
+          <img src="./images/home-house-building-estate-property-real-furniture-svgrepo-com.svg" alt="home" />
         </button>
         <button class="back-cat" disabled>
-          <img src="./images/menu-navigation.svg" alt="back" />
+          <img src="./images/menu-navigation-direction-arrow-location-map-svgrepo-com.svg" alt="back" />
         </button>
-        <label class="but-settings-toggle" for="but-settings-open"><img src="./images/settings.svg"
+        <label class="but-settings-toggle" for="but-settings-open"><img
+            src="./images/setting-gear-settings-options-preferences-configuration-tools-svgrepo-com.svg"
             alt="settings" /></label>
       </nav>
 
