feat: add card with result category

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -17,7 +17,7 @@
           <img src="./images/home-house-building-estate-property-real-furniture-svgrepo-com.svg" alt="home" />
         </button>
         <button class="back-cat" disabled>
-          <img src="./images/menu-navigation-direction-arrow-location-map-svgrepo-com.svg" alt="back" />
+          <img src="./images/menu-navigation-direction-arrow-location-map-svgrepo-com.svg" alt="category" />
         </button>
         <label class="but-settings-toggle" for="but-settings-open"><img
             src="./images/setting-gear-settings-options-preferences-configuration-tools-svgrepo-com.svg"
