feat: add Settings with some methods

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -52,14 +52,17 @@
               <button class="but-volume-on but-volume"></button>
             </div>
           </li>
+
           <li>
-            <h3>Timer</h3>
+            <h3>Music</h3>
             <div class="settings-block-content">
-              <input type="checkbox" id="toggle-button-timer" class="toggle-button" />
-              <label for="toggle-button-timer" class="text" name="off">Off</label>
-              <label for="toggle-button-timer" class="text" name="on">On</label>
+              <input type="checkbox" id="toggle-button-music" class="toggle-button" />
+              <label for="toggle-button-music" name="off" value="off">Off</label>
+              <label for="toggle-button-music" name="on" value="On">On</label>
             </div>
           </li>
+
+
           <li>
             <h3>Time to answer</h3>
             <div class="settings-block-content">
@@ -68,6 +71,26 @@
               <button class="but-time-up but-time"></button>
             </div>
           </li>
+
+          <li>
+            <h3>Timer</h3>
+            <div class="settings-block-content">
+              <input type="checkbox" id="toggle-button-timer" class="toggle-button" />
+              <label for="toggle-button-timer" name="off">Off</label>
+              <label for="toggle-button-timer" name="on">On</label>
+            </div>
+          </li>
+          <li>
+            <h3>Language</h3>
+            <div class="settings-block-content">
+              <input type="radio" id="radioButtonLangRu" name="radioButtonLang" value="ru">
+              <label for="radioButtonLangRu">ru</label>
+              <input type="radio" id="radioButtonLangEn" name="radioButtonLang" value="en" checked>
+              <label for="radioButtonLangEn">en</label>
+            </div>
+          </li>
+
+
         </ul>
         <ul class="but-set-list">
           <li>
