feat: add music state in LS

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -89,7 +89,7 @@
             <h3>Time to answer</h3>
             <div class="settings-block-content">
               <button class="but-time-down but-time"></button>
-              <input type="text" class="timeToAnswer" />
+              <input type="text" readonly value="15" class="timeToAnswer" />
               <button class="but-time-up but-time"></button>
             </div>
           </li>
