--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -65,11 +65,11 @@
 
 
 
-          <li>
+          <li class="soundSet">
             <h3>Volume of sound effects</h3>
             <div class="settings-block-content">
               <button class="but-volume-off but-volume"></button>
-              <input type="range" />
+              <input type="range" class="volumeSoundEffects" min="0" max="1" step="0.1" />
               <button class="but-volume-on but-volume"></button>
             </div>
           </li>
