feat: add transition for possible answers

--- a/art-quiz/src/index.html
+++ b/art-quiz/src/index.html
@@ -29,10 +29,10 @@
     <main>
       <ul class="quiz-type">
         <li>
-          <h2>Artists</h2>
+          <h2 id="Artists">Artists</h2>
         </li>
         <li>
-          <h2>Paintings</h2>
+          <h2 id="Paintings">Paintings</h2>
         </li>
       </ul>
     </main>
