--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -169,13 +169,13 @@
           </section>
 
           <section class="inner-section">
-            <label class="favourite-label" for="favourite-toy"
+            <label class="favorite-label" for="favorite-toy"
               ><h4 class="small-title">Любимые игрушки</h4></label
             >
             <input
               type="checkbox"
-              id="favourite-toy"
-              class="favourite-toy-input"
+              id="favorite-toy"
+              class="favorite-toy-input"
             />
           </section>
           <section class="inner-section">
@@ -183,7 +183,21 @@
           </section>
         </section>
       </div>
-      <div></div>
+      <div class="toys-container"></div>
+      <template>
+        <div>
+          <h4></h4>
+          <img src="" alt="toy" />
+          <ul>
+            <li>Количество: <span></span></li>
+            <li>Год покупки: <span></span></li>
+            <li>Форма: <span></span></li>
+            <li>Цвет: <span></span></li>
+            <li>Размер: <span></span></li>
+            <li>Любимая: <span></span></li>
+          </ul>
+        </div>
+      </template>
     </main>
     <footer class="footer">
       <div>
