feat: add eventListner for selections

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -29,7 +29,7 @@
         </section>
         <section>
           <h3 class="middle-title">Избранное</h3>
-          <span>0</span>
+          <span class="selection-count">0</span>
         </section>
         <section>
           <label for="sort-select"
