feat: add selections to LS and restore data from LS

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -25,11 +25,16 @@
             id="search"
             placeholder="Поиск"
             autocomplete="off"
+            autofocus
           />
         </section>
         <section>
           <h3 class="middle-title">Избранное</h3>
-          <span class="selection-count">0</span>
+          <span
+            >Добавлено в избранное: <span class="selection-count">0</span></span
+          >
+          <span>Свободных слотов: <span class="selection-rest">20</span></span>
+          <span class="selection-warning"></span>
         </section>
         <section>
           <label for="sort-select"
