--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./assets/favicon.ico" rel="shortcut icon" />
-    <title>Christmas</title>
+    <title>Christmas-task</title>
   </head>
   <body class="body">
     <header class="header">
@@ -13,7 +13,7 @@
     </header>
     <main class="main">
       <div class="filter">
-        <section>
+        <section class="search-section">
           <label for="search">
             <h3 class="middle-title">Поиск</h3>
           </label>
@@ -27,6 +27,9 @@
             autocomplete="off"
             autofocus
           />
+          <button class="clear-search">
+            <img src="./assets/svg/close.svg" alt="clear search" />
+          </button>
         </section>
         <section>
           <h3 class="middle-title">Избранное</h3>
