feat: add search-order logic

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -45,10 +45,10 @@
             ><h3 class="middle-title">Сортировать</h3></label
           >
           <select size="1" class="sort-select" id="sort-select">
-            <option value="nameUp">По названию от "А" до "Я"</option>
-            <option value="nameDown">По названию от "Я" до "А"</option>
-            <option value="valueUp">По количеству по возрастанию</option>
-            <option value="valueDown">По количеству по убыванию</option>
+            <option value="nameUp">По названию &uarr;</option>
+            <option value="nameDown">По названию &darr;</option>
+            <option value="valueUp">По году приобретения &uarr;</option>
+            <option value="valueDown">По году приобретения &darr;</option>
           </select>
         </section>
 
