feat:  add half-working filter logic

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -172,9 +172,7 @@
             </ul>
           </section>
           <section class="inner-section">
-            <label class="favorite-label" for="favorite-toy"
-              ><h4 class="small-title">Любимые игрушки</h4></label
-            >
+            <h4 class="small-title">Любимые игрушки</h4>
             <input
               type="checkbox"
               id="favorite-toy"
